<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.howest.nmct.skateparknavigator.SkateparkDetailFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name_skatepark"
        android:id="@+id/textView_name_detail"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />

    <View
        android:layout_below="@+id/textView_name_detail"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#cecece"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/textView_description"
        android:layout_below="@+id/textView_name_detail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />

    <View
        android:layout_below="@+id/textView_description"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#cecece"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adres"
        android:id="@+id/adres"
        android:layout_below="@+id/textView_description"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Straat"
        android:id="@+id/street_detail"
        android:layout_below="@+id/adres"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postcode"
        android:id="@+id/textView_postcode"
        android:layout_below="@+id/street_detail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:id="@+id/city_detail"
        android:layout_below="@+id/textView_description"
        android:layout_alignTop="@id/textView_postcode"
        android:layout_toEndOf="@+id/textView_postcode" />
</RelativeLayout>
